--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
         <div class="test1-div"></div>
         <div class="test2-div"></div>
         <script>
-            var segment1 = new instantiateableChunk(document.querySelector(".test1-div"))
+            var segment1 = new domChunk(document.querySelector(".test1-div"))
             var segment2 = new instantiateableChunk(document.querySelector(".test2-div"))
         </script>
     </body>
