--- a/test.html
+++ b/test.html
@@ -6,8 +6,8 @@
         <div class="test1-div"></div>
         <div class="test2-div"></div>
         <script>
-            var segment1 = new templateInstance(document.querySelector(".test1-div"))
-            var segment2 = new instantiateable(document.querySelector(".test2-div"))
+            // var segment1 = new templateInstance(document.querySelector(".test1-div"))
+            // var segment2 = new instantiateable(document.querySelector(".test2-div"))
         </script>
     </body>
 </html>
