added the first useful function: consume

--- a/test.html
+++ b/test.html
@@ -8,6 +8,8 @@
         <script>
             // var segment1 = new templateInstance(document.querySelector(".test1-div"))
             // var segment2 = new instantiateable(document.querySelector(".test2-div"))
+
+            stateless.consume(document.querySelector(".test1-div"))
         </script>
     </body>
 </html>
