--- a/test.html
+++ b/test.html
@@ -3,13 +3,16 @@
         <script src="templater.js"></script>
     </head>
     <body>
-        <div class="test1-div"></div>
+        <div id="first-div" class="test1-div"></div>
         <div class="test2-div"></div>
         <script>
             // var segment1 = new templateInstance(document.querySelector(".test1-div"))
             // var segment2 = new instantiateable(document.querySelector(".test2-div"))
 
             stateless.consume(document.querySelector(".test1-div"))
+            stateless.forEach(function(item){
+                console.log(item);
+            });
         </script>
     </body>
 </html>
