added more item functions.

--- a/test.html
+++ b/test.html
@@ -30,6 +30,8 @@ item.text(string)
 item.html(string)
 item.attr(string [, string])
 item.data(string [,string])
+item.define(callback(element))
+item.element()
 
 Other tools:
 stateless.each(callback(item, index));
