htmlelement.scope -> retrive template instance

--- a/test.html
+++ b/test.html
@@ -32,8 +32,9 @@ item.data(string [,string]) -> get or set the data- attribute
 item.define(callback(element)) -> define a peroperty for the object
 item.element() -> gets the dom element
 
-Other tools:
-stateless.each(callback(item, index));
+Other options:
+stateless.each(callback(item, index)) -> itterate through all the templates once
+instantiated_domobject.scope -> property that provides the templateInstance
 </pre>
         <div id="first-div" class="test1-div">
             <strong>testing</strong>
