--- a/test.html
+++ b/test.html
@@ -31,10 +31,13 @@ item.attr(string [, string]) -> get or set the attribute
 item.data(string [,string]) -> get or set the data- attribute
 item.define(callback(element)) -> define a peroperty for the object
 item.element() -> gets the dom element
+item.children -> read only property that returns all child contexts
+item.parent -> read only property that returns the parent context if it exists;
+item.root -> returns the root parent context;
 
 Other options:
 stateless.each(callback(item, index)) -> itterate through all the templates once
-instantiated_domobject.scope -> property that provides the templateInstance
+instantiated_domobject.context -> property that provides the templateInstance
 </pre>
         <div id="first-div" class="test1-div">
             <strong>testing</strong>
