better tagging of functions in the test HTML

--- a/test.html
+++ b/test.html
@@ -33,7 +33,7 @@ item.define(callback(element)) -> define a peroperty for the object
 item.element() -> gets the dom element
 item.children -> read only property that returns all child contexts
 item.parent -> read only property that returns the parent context if it exists;
-item.root -> returns the root parent context;
+item.root -> returns the root context of the chain;
 
 Other options:
 stateless.each(callback(item, index)) -> itterate through all the templates once
