--- a/test.html
+++ b/test.html
@@ -34,6 +34,7 @@ item.element() -> gets the dom element
 item.children -> read only property that returns all child contexts
 item.parent -> read only property that returns the parent context if it exists;
 item.root -> returns the root context of the chain;
+item.include -> inclode another html node into the currnet context
 
 Other options:
 stateless.each(callback(item, index)) -> itterate through all the templates once
