--- a/test.html
+++ b/test.html
@@ -118,6 +118,9 @@ instantiated_domobject.scope -> property that provides the templateInstance
                 //.render()
                 .addClass("state")
                 .addClass("state")
+                .addClass("state", true)
+            console.log(secondDiv.attr("class"))
+            secondDiv.removeClass("state")
             console.log(secondDiv.attr("class"))
         </script>
     </body>
