--- a/test.html
+++ b/test.html
@@ -17,19 +17,19 @@ var item = stateless.instantiate(id)
 
 step 3 - manipulate the item
 item.render() -> renders to body
-item.addClass(string) -> adds a class to the dom element
-item.removeClass(string) -> removes a class to the dom element
+item.addClass(string[, multiple]) -> adds a class uniquely to the dom element, if multiple add it regardless
+item.removeClass(string[, multiple]) -> removes a class uniquely to the dom element, if multiple add it regardless
 item.hasClass(string) -> returns true/false based of if the dom element has the class
 item.css(string [, string]) -> query the css property or set it
-item.appendChild(item) -> append dom element to this dom element
+item.appendChild(item[, where]) -> append dom element to this dom element or at a specified CSS selected element's child
 item.unlink() -> remove this dom element from it's parent
 item.on("event", callback) -> attach an event listener to the dom element
 item.off("event", callback) -> remove an event listener from the dom element
 item.once("event", callback) -> add a call once event listener to the dom element
-item.text(string) -> append the string to the element at the ins location
+item.text([string[, where]]) -> no args = get inner string, 1 arg = replace inner string, 2 arg = replace inner string at element
 item.attr(string [, string]) -> get or set the attribute
 item.data(string [,string]) -> get or set the data- attribute
-item.define(callback(element)) -> define a peroperty for the object
+item.define(property, options) -> define a peroperty for the object
 item.element(selector) -> gets the one dom element or the first selected match
 item.elements(selector) -> gets everything including the root or just everything that matches the selector
 item.children -> read only property that returns all child scopes
@@ -52,6 +52,7 @@ instantiated_domobject.scope -> property that provides the templateInstance
         <div class="test2-div"></div>
 
         <script>
+            // used for mobile deving where the console doesn't exist
             function mobileLog(){
                 var originalLog = console.log;
                 console.log = function(){
@@ -67,6 +68,7 @@ instantiated_domobject.scope -> property that provides the templateInstance
                 }
             }
 
+            // a dom based console module made using stateless
             stateless.consume("<div id='console'><pre style='width: 100%; height:8em; border: solid 1px #000; overflow:auto;'></pre><textarea rows='3' style='width:100%; margin-top:1em; margin-bottom:1em;'></textarea><button onclick='this.scope._eval(true)' style='width:50%; display:inline'>run and clear</button><button onclick='this.scope._eval()' style='width:50%; display:inline'>run</button></div>")
             var cons = stateless.instantiate("console")
             cons._eval = function(clear){
@@ -95,6 +97,7 @@ instantiated_domobject.scope -> property that provides the templateInstance
         	cons.render()
         	//mobileLog()
 
+            // the actual test code here
             stateless.register(document.querySelector(".test1-div"))
                 .register("<div id='string-div'>I was made from a string</div>")
                 .register(document.querySelectorAll(".test2-div"))
