--- a/test.html
+++ b/test.html
@@ -30,8 +30,8 @@ item.text([string[, where]]) -> no args = get inner string, 1 arg = replace inne
 item.attr(string [, string]) -> get or set the attribute
 item.data(string [,string]) -> get or set the data- attribute
 item.define(property, options) -> define a peroperty for the object
-item.element(selector) -> gets the one dom element or the first selected match
-item.elements(selector) -> gets everything including the root or just everything that matches the selector
+item.element([selector]) -> gets the one dom element or the first selected match
+item.elements([selector]) -> gets everything including the root or just everything that matches the selector
 item.children -> read only property that returns all child scopes
 item.parent -> read only property that returns the parent scope if it exists;
 item.root -> returns the root scope of the chain;
