--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<script src="templater.js"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
 <pre style="width:100%; overflow:auto;">
