activated mobile console

--- a/test.html
+++ b/test.html
@@ -96,7 +96,7 @@ instantiated_domobject.scope -> property that provides the templateInstance
 			}
 
 			cons.render()
-			//mobileLog()
+			mobileLog()
 
 			// the actual test code here
 			stateless.register(document.querySelector(".test1-div"))
