--- a/test.html
+++ b/test.html
@@ -181,9 +181,9 @@ functions that manipulate the dom are on the DOM Element as well as the scope ob
 			}
 			console.log("secondDiv's indexable keys should be \"status\",\"changeStatus\",\"static\",\"getSet\",\"getOnly\" has", (indexable.toString == "status,changeStatus,static,getSet,getOnly")? "passed" : `failed. secondDiv.getOnly = ${indexable.toString()}`);
 
-			firstDiv.element("a").on("mouseover", function(){console.log("hovered")})
+			firstDiv.on("a", "mouseover", function(){console.log("hovered")})
 			console.log("There should be a warning after this message")
-			secondDiv.element("a").on("mouseover", function(){console.log("hovered")})
+			secondDiv.on("a", "mouseover", function(){console.log("hovered")})
 			console.log("If there was a warning before this message then the test has passed")
 		</script>
 	</body>
