fixed up append

--- a/test.html
+++ b/test.html
@@ -107,7 +107,7 @@ instantiated_domobject.scope -> property that provides the templateInstance
 				});
 
 			var firstDiv = stateless.instantiate("first-div")
-				.appendChild(stateless.instantiate(3), "p")
+				.appendChild(stateless.instantiate(3))
 				.render()
 
 			firstDiv.fn = function(){
