added selector to once

--- a/test.html
+++ b/test.html
@@ -191,6 +191,7 @@ instantiated_domobject.scope -> property that provides the templateInstance
 			
 			firstDiv.on("$ a", "click", function(){alert("working")})
 			secondDiv.off("$ a", "click", function(){alert("working")})
+			secondDiv.once("$ a", "click", function(){alert("working")})
 		</script>
 	</body>
 </html>
