--- a/test.html
+++ b/test.html
@@ -188,10 +188,14 @@ instantiated_domobject.scope -> property that provides the templateInstance
 			console.log("firstDiv.data('mess') should retur 'abcd1234'", (firstDiv.data("mess") == 'abcd1234')? "passed":"failed")
 
 			secondDiv.append(firstDiv.element("a"), `<strong>ABC</strong><em>123</em>`)
-			
+
 			firstDiv.on("$ a", "click", function(){alert("working")})
 			secondDiv.off("$ a", "click", function(){alert("working")})
 			secondDiv.once("$ a", "click", function(){alert("working")})
+
+			firstDiv.addClass("$a", "link")
+				.addClass("$a", "link")
+			console.log("if secondDiv->a has only 1 'link' class", (firstDiv.element("a").className == "link")? "passed" : "failed")
 		</script>
 	</body>
 </html>
