--- a/test.html
+++ b/test.html
@@ -2,6 +2,12 @@
 	<head>
 		<script src="templater.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<style>
+			.test2-div{
+				display:block;
+				height:auto;
+			}
+		</style>
 	</head>
 	<body>
 <pre style="width:100%; overflow:auto;">
@@ -47,7 +53,7 @@ instantiated_domobject.scope -> property that provides the templateInstance
 			<p>I am testing something bla bla</p>
 			<div class="first-div-subdiv"></div>
 		</div>
-		<div class="test2-div" >
+		<div class="test2-div" style="backgrounD-color: gray">
 			<a href="javascript:void[0]" onclick="this.scope.fn()">Here is something to click on</a>
 		</div>
 		<div class="test2-div"></div>
@@ -200,6 +206,9 @@ instantiated_domobject.scope -> property that provides the templateInstance
 			console.log("secondDiv.attr('$a', 'class') == 'link'", (secondDiv.attr('$a', 'class') == 'link')? "passed": "failed")
 			console.log(`secondDiv.attr("$a", "class") == "link"`, (secondDiv.attr("$a", "class") == "link")? "passed" : "failed")
 			console.log(`secondDiv.hasClass("$a", "link") === true`, (secondDiv.hasClass("$a", "link") === true)? "passed" : "failed")
+			console.log(`secondDiv.css("display") == "block"`, (secondDiv.css("display") == "block")? "passed" : "failed")
+			secondDiv.css("background-color", "blue")
+			console.log(`secondDiv.css("background-color") == "rgb(0, 0, 255)"`, (secondDiv.css("backgroundColor") == "rgb(0, 0, 255)")? "passed" : "failed")
 		</script>
 	</body>
 </html>
