--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<script src="templater.js"></script>
+		<script src="stateless.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<style>
 			.test2-div{
