--- a/example.html
+++ b/example.html
@@ -1,4 +1,34 @@
 <html>
-	<head></head>
-	<body></body>
+	<head>
+		<script src="stateless.js"></script>
+		<style>
+			.calc-body {
+				width: 100%;
+				max-width: 400px;
+				margin-left: auto;
+				margin-right: auto;
+				padding: 1em;
+			}
+		</style>
+	</head>
+	<body>
+		<div id="block"></div>
+		
+		<script>
+			stateless
+				.register("#block")
+				.register("<button onclick='this.scope.execute(this.scope.command)'></button>")
+			stateless.instantiate("block")
+				.render()
+				.addClass("calc-body")
+				.append(
+					stateless.instantiate("block")
+						.addClass("screen")
+				)
+				.append(
+					stateless.instantiate("btn")
+						.addClass
+				)
+		</script>
+	</body>
 </html>
